--- a/inc/appA.tex
+++ b/inc/appA.tex
@@ -5,7 +5,7 @@
 \clearpage
 
 \appsection{Приложение А}
-\centering{Листинг кода реализованного RestApi}
+\centering{Листинг кода серверной части приложения}
 \vspace{\baselineskip}
 
 \begin{lstlisting}
@@ -32,8 +32,10 @@ app.config['DEBUG'] = True
 mongo = PyMongo(app)
 jwt = JWTManager(app)
 current_time = datetime.datetime.utcnow()
-
-
+\end{lstlisting}
+\clearpage
+\centering{Продолжение Приложения А}
+\begin{lstlisting}
 # `Регистрация пользователя`
 @app.route('/registration', methods=['POST'])
 def create_user():
@@ -47,9 +49,11 @@ user = {
 "unacceptable_products": [],
 }
 mongo.db.users.insert(user)
-return 'You have successfully registered'
+user = mongo.db.users.find_one({'name': data['name']}, {'_id': 1, 'name': 1, 'password': 1})
+access_token = create_access_token(identity=str(user['_id']))
+refresh_token = create_refresh_token(identity=str(user['_id']))
+return jsonify(access_token=access_token, refresh_token=refresh_token)
 return 'User exist'
-
 
 # `Авторизация пользователя`
 @app.route('/login', methods=['POST'])
@@ -63,9 +67,12 @@ return make_response('Could not verify', 401)
 if check_password_hash(user['password'], data['password']):
 access_token = create_access_token(identity=str(user['_id']))
 refresh_token = create_refresh_token(identity=str(user['_id']))
+\end{lstlisting}
+\clearpage
+\centering{Продолжение Приложения А}
+\begin{lstlisting}
 return jsonify(access_token=access_token, refresh_token=refresh_token)
 return make_response('Could not verify', 401)
-
 
 # `Обновление токена доступа`
 @app.route("/refresh", methods=["POST"])
@@ -79,13 +86,11 @@ return jsonify('this token invalid')
 token_blacklist = {
 'jti': jti,
 'created_at': current_time,
-'user_id': current_user
-}
+'user_id': current_user }
 mongo.db.token_blacklist.insert(token_blacklist)
 access_token = create_access_token(identity=current_user)
 refresh_token = create_refresh_token(identity=current_user)
 return jsonify(access_token=access_token, refresh_token=refresh_token)
-
 
 # `Добавление и удаление недопустимых продуктов`
 @app.route("/unacceptable_products", methods=['POST', 'DELETE'])
@@ -96,12 +101,15 @@ unacceptable_products = request.json['unacceptable_products']
 if request.method == 'POST':
 mongo.db.users.update({"_id": ObjectId(current_user)},
 {'$addToSet': {'unacceptable_products': {'$each': unacceptable_products}}})
-return jsonify("Указанные продукты добавлены в список нежелательных")
+\end{lstlisting}
+\clearpage
+\centering{Продолжение Приложения А}
+\begin{lstlisting}
+return jsonify(`"Указанные продукты добавлены в список нежелательных"`)
 if request.method == 'DELETE':
 mongo.db.users.update({"_id": ObjectId(current_user)},
 {'$pullAll': {'unacceptable_products': unacceptable_products}})
-return jsonify("Указанные продукты удалены из списка нежелательных")
-
+return jsonify(`"Указанные продукты удалены из списка нежелательных"`)
 
 # `получение продукта по штрих-коду`
 @app.route("/product", methods=['POST'])
@@ -124,10 +132,8 @@ return_result = {
 "name": product['name'],
 "composition": product['composition'],
 "unacceptable_products": result,
-"esl": product['esl']
-}
+"esl": product['esl'] }
 return jsonify(return_result)
-
 
 if __name__ == '__main__':
 app.run()
