--- a/inc/development_tools.tex
+++ b/inc/development_tools.tex
@@ -66,6 +66,60 @@ View или представление определяет визуальный
 
 ViewModel связывает модель и представление через механизм привязки данных. ViewModel также содержит логику по получению данных из модели, которые потом передаются в представление. И также VewModel определяет логику по обновлению данных в модели.
 
+\subsection{Операционная система android}
+Android - операционная система для мобильных телефонов, смартфонов планшетов и других устройств, которая основывается на ядре Linux. Изначально ОС Android разрабатывала компания Android Inc., но затем ее купила компания Google. На рисунке \ref{Android-Architecture} представлена архитектура операционной системы android.
+\addimghere{Android-Architecture}{0.80}{Архитектура ОС Андроид}{Android-Architecture}
+
+Уровень приложений (Applications).
+В состав Android входит комплект базовых приложений: клиенты электронной почты и SMS, календарь, различные карты, браузер, программа для управления контактами и много другое. 
+
+Уровень каркаса приложений (Application Framework). Android позволяет использовать всю мощь API, используемого в приложениях ядра. Архитектура построена таким образом, что любое приложение может использовать уже реализованные возможности другого приложения при условии, что последнее откроет доступ на использование своей функциональности. Таким образом, архитектура реализует принцип многократного использования компонентов ОС и приложений. Основой всех приложений является набор систем и служб:
+\begin{enumerate}
+	\item Система представлений (View System) – это богатый набор представлений с расширяемой функциональностью, который служит для построения внешнего вида приложений, включающий такие компоненты, как списки, таблицы, поля ввода, кнопки и т.п.
+	\item Контент-провайдеры (Content Providers) – это службы, которые позволяют приложениям получать доступ к данным других приложений, а также предоставлять доступ к своим данным.
+	\item Менеджер ресурсов (Resource Manager) предназначен для доступа к строковым, графическим и другим типам ресурсов.
+	\item Менеджер извещений (Notification Manager) позволяет любому приложению отображать пользовательские уведомления в строке статуса.
+	\item Менеджер действий (Activity Manager) управляет жизненным циклом приложений и предоставляет систему навигации по истории работы с действиями.
+\end{enumerate}
+
+Уровень библиотек (Libraries). Платформа Android включает набор C/C++ библиотек, используемых различными компонентами ОС. Для разработчиков доступ к функциям этих библиотек реализован через использование Application Framework.
+
+Уровень среды исполнения (Android Runtime). В состав Android входит набор библиотек ядра, которые предоставляют большую часть функциональности библиотек ядра языка Java. В Android используется собственная реализация JVM под названием Android Runtime (ART), специально оптимизированная для работы на мобильных устройствах. В старых версиях Android (до 5.0 Lollipop) вместо ART использовалась другая реализация под названием Dalvik.
+
+Уровень ядра Linux (Linux Kernel). Android основан на ОС Linux, тем самым платформе доступны системные службы ядра, такие как управление памятью и процессами, обеспечение безопасности, работа с сетью и драйверами. Также ядро служит слоем абстракции между аппаратным и программным обеспечением.
+
+\subsection{Выбор и обоснование инструментов разработки}
+
+Исходя из системных требований предъявляемых к реализуемому серверу, к выбору инструментов разработки накладываются следующие ограничения:
+\begin{enumerate}
+	\item Поддержка формата передачи данных JSON;
+	\item Наличие библиотек для работы со стандартом JWT;
+	\item Возможность реализации архитектурного стиля REST.
+\end{enumerate}
+
+В качестве базы данных было решено использовать NoSQL СУБД MongoDB\cite{3}. Подробное изучение данной СУБД позволило выявить ряд нижеописанных преимуществ для нашей системы:
+\begin{enumerate}
+	\item Документоориентированность – СУБД предназначена для хранения иерархических структур данных (документов).
+	\item Представление в формате JSON – формат данных JSON удобен в интерпретации и использовании. В виду того, что серверная составляющая должна предоставлять RestAPI, MongoDB отлично подходит для реализации нашего сервиса.
+	\item Гибкость и динамичность данных – MongoDB способен хранить
+	как структурированные, так и не структурированные данные.
+	\item Документация и ПО – данная СУБД является ПО с открытым исходным кодом, с отличной документацией и реализацией драйверов для подавляющего большинства языков программирования.
+\end{enumerate}
+
+Исходя из системных требований к проектируемому сервису, представление данных в формате JSON стал решающим фактором в выборе данного СУБД. Это позволит исключить использование дополнительных прослоек в виде ORM для преобразования данных.
+
+Для реализации сервера используется язык программирования Python версии 3.8.5 и фреймворк для создания веб-приложений
+Flask\cite{4}. Flask предоставляет гибкую настройку веб-приложения с минимальным количеством зависимостей. Пакетный менеджер pip предоставляет множество расширений для языка Python, благодаря чему реализация взаимодействия между компонентами системы сводится к написанию бизнес логики. Процесс написания программного кода и его отладки осуществлялся в интегрированной среде разработки PyCharm версии 2020.3.3. Для взаимодействия с базой данных используется рекомендованный способ для работы с MongoDB из среды Python пакет PyMongo\cite{5}. Пример подключения к базе данных:
+\begin{lstlisting}
+app.config["MONGO_URI"] = "mongodb://localhost:27017/barcode"
+mongo = PyMongo(app)
+\end{lstlisting}
+
+Создается экземпляр класса клиента базы данных, который используется для обращения к данным. Благодаря тому, что данная база является документоориентированной с представлением объектов в типе BSON отсутствует миграция базы данных.
+
+Для реализации стандарта аутентификации используется расширение
+Flask-JWT-Extended\cite{6}, которое реализует весь необходимый функционал. Для встраивания данного функционала в программный код, достаточно добавить к методам ресурсов соответствующие декораторы доступа. При возникновении ошибки декоратор прерывает выполнение обработки запроса и возвращает соответствующее сообщение. По умолчанию access-токен валиден в течение 15 минут, а refresh-токен в течение 30 дней. Для авторизованного запроса необходимо передать параметр Authorization в заголовке запроса с содержимым: Bearer <соответствующий токен доступа (access/refresh)>.
+
 
 
 
