--- a/inc/intro.tex
+++ b/inc/intro.tex
@@ -9,4 +9,16 @@
 информацию о составе и пищевой ценности продукта в удобочитаемом
 виде. В приложении можно заранее составлять список нежелательных
 продуктов в составе товара, которые будут подсвечиваться определенным цветом предупреждая вас. Также ведется подсчет калорий и соотношения белков, жиров и углеводов в корзине для соблюдения баланса энергетической ценности.
+
+Целью данной работы является разработка клиент-серверного приложения <<ShoppingAssistant>>, ориентированное на людей следящих за
+своим питанием:
+\begin{enumerate}
+	\item Людей имеющих аллергию на определенные продукты;
+	\item Вегетарианцев;
+	\item Людей соблюдающих пост по религиозным или иным причинам;
+	\item Людей соблюдающих диету для похудения или для набора мышечной массы.
+\end{enumerate}
+
+При релизации сервера придерживаться архитектурного стиля REST(Representational State Transfer — «передача состояния представления»). Для взаимодействия с клиентом сервер должен предоставлять API(Application Programming Interfaces  — «интерфейс прикладного программирования»). Использовать данные полученные и подготовленные в рамках курса <<Нереляционные базы данных>>.
+При реализации клиентского приложения использовать архитектурный паттерн MVVM.
 \clearpage
