--- a/inc/requirements_specification.tex
+++ b/inc/requirements_specification.tex
@@ -1,22 +1,30 @@
-\section{Постановка задачи}
+\section{Анализ предметной области}
 
+\subsection{Исследование предметной области}
 
-Разработать клиент-серверное приложения <<ShoppingAssistant>>.
-Приложение <<ShoppingAssistant>> ориентирована на людей следящих за
-своим питанием:
+В ходе исследования выявлены следующие сущности характеризующие предметную область данной работы:
 \begin{enumerate}
-	\item Людей имеющих аллергию на определенные продукты;
-	\item Вегетарианцев;
-	\item Людей соблюдающих пост по религиозным или иным причинам;
-	\item Людей соблюдающих диету для похудения или для набора мышечной массы.
-\end{enumerate}
+	\item Пользователь -- потенциальный клиент пользующийся услугами разрабатываемого приложения
+	\item Продукт -- переработанный и произведенный продовольственный товар предназначенный для употребления человеком в пищу. 
+	\item Недопустимый продукт -- нежелательный к употреблению ингредиент для пользователя, входящий в состав продукта. 
+\end{enumerate} 
+
+Целью пользователя является получение информации о продукте. Поэтому пользователю необходимо предоставить удобный инструмент для поиска продуктов в разрабатываемом сервисе. Для этого необходимо однозначно идентифицировать продукты в системе. Одним из возможных вариантов решения этой проблемы, является использование штрих-кода. 
+Рассмотрим более подробно процесс маркировки товаров и выясним целесообразность использования штрих-кода в качестве уникального идентификатора продукта. 
+
+Каждый произведенный и допущенный к продаже продовольственный товар должен маркироваться штрих-кодом. Штрих-код это последовательность чёрных и белых полос, нанесенная на поверхность, маркировку или упаковку товаров, предоставляющая возможность считывания её техническими средствами. Двоичная система цифр обеспечивает удобную запись штрих кодов. Штрихи обозначаются цифрой «1», а пробелы «0».
+В штрих-код зашифровывается номер GTIN. GTIN обеспечивает однозначную идентификацию товара в любой стране мира и не может быть присвоен никакому иному товару. Функции администрирования номера GTIN в каждой стране возложена на национальную организацию GS1. GTIN имеет четкую структуру — то есть строится по определенным правилам. В зависимости от назначения товара, ему может быть присвоено GTIN длиной 8, 12,13 или 14 цифр. Большинство товаров во всем мире кодируют системой EAN-13. Код EAN-13 состоит из 13 цифр и имеет следующую структуру:
+\begin{enumerate}
+	\item Первые 3 цифры кода EAN-13 обозначают страну производства товара;
+	\item Следующие 4 цифры являются кодом предприятия изготовителя товара;
+	\item Следующие 5 цифр – это код товара по классификации изготовителя;
+	\item 13-я цифра – контрольное число, которое вычисляется из предыдущих двенадцати.
+\end{enumerate} 
+
+Нанесение штрих-кода на товар осуществляет производитель с применением данных о стране местонахождения и кода производителя. Из вышесказанного следует, что штрих-код является лучшим выбором для идентификации продуктов в нашем сервисе. Использование такого подхода позволит реализовать сканер штрих-кода, что несомненно увеличит удобство использования приложения.
 
 
-При релизации сервера придерживаться архитектурного стиля REST(Representational State Transfer — «передача состояния представления»). Для взаимодействия с клиентом сервер должен предоставлять API(Application Programming Interfaces  — «интерфейс прикладного программирования»). Использовать данные полученные и подготовленные в рамках курса <<Нереляционные базы данных>>.
-При реализации клиентского приложения использовать архитектурный паттерн MVVM.
-
-
-\subsection{Функциональные требования}
+\subsection{Выявление функциональных и системных требований}
 Реализуемый сервис должен удовлетворять следующим функциональным требованиям:
 \begin{enumerate}
 	\item Регистрация пользователя. Все данные пользователя должны храниться в БД. Для обеспечения безопасности, пароль доступа должен храниться в зашифрованном виде;
@@ -30,8 +38,6 @@
 	\end{itemize}
 \end{enumerate}
 
-\subsection{Системные требования}
-
 Для реализуемого сервиса предъявляются следующие системные требования:
 
 \begin{enumerate}
@@ -41,6 +47,49 @@
 	\item Импортировать в базу данных разрабатываемого сервера данные, полученные и подготовленные в рамках курса <<Нереляционные базы данных>>.
 	\item Клиент должен быть реализован для операционной системы Android c применением шаблона проектирования MVVM. 
 \end{enumerate}
+
+\subsection{Анализ существующих аналогов приложения}
+
+В ходе поиска аналогов со схожим функционалом, были найдены два приложения <<Open Food Facts>> и <<Состав продуктов>>. Мы провели небольшой анализ этих приложений, в ходе которого выявили достоинства и недостатки каждого из них.
+
+<<Open Food Facts>> -- это бесплатная онлайн-база данных о пищевых продуктах со всего мира, функционирующая под лицензией Open Database License (ODBL). Проект призван собирать информацию и данные о пищевых продуктах со всего мира. Для каждого продукта в базе данных хранится его общее название, тип упаковки, бренд, категория, места производства, страны и магазины, где продается продукт, список ингредиентов. Для взаимодействия с этой базой данных реализовано приложение, которое можно скачать в Google Play.
+\newline
+  
+Достоинства:
+\begin{enumerate}
+	\item Большая база данных с продуктами по всему миру.
+	\item Возможность просмотра полной информации о продукте
+	\item Поиск продукта по штрих-коду
+	\item Наличие сканера штрих-кода 
+\end{enumerate}
+
+Недостатки:
+\begin{enumerate}
+	\item В базе данных представлено мало российских продуктов  
+	\item Не удобное для чтения отображение информации о продукте
+	\item Отсутствует возможность добавления недопустимых для пользователя продуктов в составе товара.
+\end{enumerate}
+
+<<Состав продуктов>> -- приложение предоставляет информацию о питательной ценности продуктов и их химическом составе: содержание белков, жиров, углеводов, калорийности, витаминов, минеральных веществ.
+
+Достоинства:
+\begin{enumerate}
+	\item Большая база данных с российскими продуктами.
+	\item Возможность просмотра полной информации о продукте
+\end{enumerate}
+
+Недостатки:
+\begin{enumerate}
+	\item Отсутствует поиск по штрих коду продукта. Присутствует возможность выбора из предложенных категорий или поиска по названию. В отличие от штрих кода название не является уникальным свойством продукта и не может его полностью идентифицировать. 
+	\item Отсутствует возможность добавления недопустимых для пользователя продуктов в составе товара.
+\end{enumerate}
+
+В ходе проведенного анализа не найдены аналоги покрывающие весь функционал разрабатываемого приложения. 
+
+
+
+
+
 
 
 \clearpage
